--- a/theme.jsonc
+++ b/theme.jsonc
@@ -1,12 +1,12 @@
 /*
-Chronic Monokai VSCode color theme
-==================================
+ Chronic Monokai VSCode Color Theme
+ ==================================
   URI: https://raw.githubusercontent.com/vandavey/ChronicMonokai/master/theme.json
 
-Usage
------
-  Copy and paste the "workbench.colorCustomizations" JSON object
-  into your VSCode preference settings file (settings.json)
+ Usage
+ -----
+ *) Copy and paste the "workbench.colorCustomizations" JSON object
+    into your VSCode preference settings file (settings.json)
 */
 {
     "workbench.colorCustomizations": {
