Fixed Incorrect URI

--- a/theme.jsonc
+++ b/theme.jsonc
@@ -1,7 +1,7 @@
 /*
  Chronic Monokai VSCode Color Theme
  ==================================
-  URI: https://raw.githubusercontent.com/vandavey/ChronicMonokai/master/theme.json
+  URI: https://raw.githubusercontent.com/vandavey/ChronicMonokai/main/theme.jsonc
 
  Theme Usage
  -----------
