--- a/chronic-monokai/package.json
+++ b/chronic-monokai/package.json
@@ -1,20 +1,18 @@
-/*
-*  package.json
-*  ------------
-*  Manifest file that defines the Chronic-Monokai
-*  theme properties and relative file location
-*/
 {
     "name": "chronic-monokai",
     "displayName": "Chronic-Monokai",
-    "description": "Monokai flavored editor and syntax theme",
+    "description": "Monokai flavored editor and syntax color theme",
     "version": "0.0.1",
-    "engines": {
-        "vscode": "^1.52.0"
+    "author": {
+        "name": "vandavey",
+        "url": "https://github.com/vandavey"
     },
     "categories": [
         "Themes"
     ],
+    "engines": {
+        "vscode": "^1.67.0"
+    },
     "contributes": {
         "themes": [
             {
